RESOLVED FIXED102246
[chromium] Do not mark an event (mouse wheel, scroll update) as handled if nothing was scrolled.
https://bugs.webkit.org/show_bug.cgi?id=102246
Summary [chromium] Do not mark an event (mouse wheel, scroll update) as handled if no...
Sadrul Habib Chowdhury
Reported 2012-11-14 09:57:57 PST
[chromium] Do not mark an event (mouse wheel, scroll update) as handled if nothing was scrolled.
Attachments
Patch (10.73 KB, patch)
2012-11-14 10:00 PST, Sadrul Habib Chowdhury
jamesr: review+
jamesr: commit-queue-
same patch (10.73 KB, patch)
2012-11-15 06:25 PST, Sadrul Habib Chowdhury
webkit.review.bot: commit-queue-
patch (9.71 KB, patch)
2012-11-15 10:08 PST, Sadrul Habib Chowdhury
no flags
Sadrul Habib Chowdhury
Comment 1 2012-11-14 10:00:23 PST
Sadrul Habib Chowdhury
Comment 2 2012-11-14 10:01:34 PST
Hi! This is the corresponding change for chromium patch http://codereview.chromium.org/11365238/
WebKit Review Bot
Comment 3 2012-11-14 10:05:12 PST
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
James Robinson
Comment 4 2012-11-14 10:14:50 PST
Comment on attachment 174185 [details] Patch R=me, but with this setup I think you're going to have a hard time landing without breaking one build or another. Typically a transition like this is done by adding a #define to guard the new API and #ifdefing on that in the chromium side.
WebKit Review Bot
Comment 5 2012-11-14 10:27:43 PST
Comment on attachment 174185 [details] Patch Attachment 174185 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/14824813
Peter Beverloo (cr-android ews)
Comment 6 2012-11-14 20:41:04 PST
Comment on attachment 174185 [details] Patch Attachment 174185 [details] did not pass cr-android-ews (chromium-android): Output: http://queues.webkit.org/results/14831623
Sadrul Habib Chowdhury
Comment 7 2012-11-15 06:25:22 PST
Created attachment 174421 [details] same patch The chromium CL this depends on has now been gardened for webkit. It should be safe to land now. Re-uploading the same patch so I can send it to EWS.
Sadrul Habib Chowdhury
Comment 8 2012-11-15 09:26:49 PST
Comment on attachment 174421 [details] same patch The chromium build is green from EWS. Requesting cq
WebKit Review Bot
Comment 9 2012-11-15 09:38:59 PST
Comment on attachment 174421 [details] same patch Rejecting attachment 174421 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/Platform/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14845539
Dana Jansens
Comment 10 2012-11-15 09:40:03 PST
You need to webkit-patch land-safely to stick james' name in the changelog, or do it by hand and reupload.
Sadrul Habib Chowdhury
Comment 11 2012-11-15 10:08:52 PST
Created attachment 174476 [details] patch Uploading the same patch with correct 'Reviewed By' in ChangeLog. Thanks!
WebKit Review Bot
Comment 12 2012-11-15 11:57:42 PST
Comment on attachment 174476 [details] patch Clearing flags on attachment: 174476 Committed r134809: <http://trac.webkit.org/changeset/134809>
Note You need to log in before you can comment on or make changes to this bug.