[chromium] Do not mark an event (mouse wheel, scroll update) as handled if nothing was scrolled. https://bugs.webkit.org/show_bug.cgi?id=102246

Patch by Sadrul Habib Chowdhury <sadrul@chromium.org> on 2012-11-15
Reviewed by James Robinson.

* src/WebCompositorInputHandlerImpl.cpp:
(WebKit::WebCompositorInputHandlerImpl::handleInputEventInternal):
* tests/WebCompositorInputHandlerImplTest.cpp:
(MockWebInputHandlerClient):
(WebKit::TEST_F):

Canonical link: https://commits.webkit.org/120516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134809 268f45cc-cd09-0410-ab3c-d52691b4dbfc